@@ -1,3 +1,8 @@
+2004-08-10  Satoru Takabayashi  <satoru@namazu.org>
+
+	* pdumpfs.in (parse_options): Fix a bug arised by the yesterday's
+	modification. 
+
 2004-08-09  Satoru Takabayashi  <satoru@namazu.org>
 
 	* pdumpfs.in (parse_options): Don't strip the trailing / if
